# Rust-server-test

backend/: .env  Cargo.toml
backend/src/: main.rs
frontend/: package-lock.json  package.json
frontend/app/: page.tsx
