[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
http = "0.2"
actix-web = "4.0.0-beta.8"
actix-cors = "0.5.2"
actix-rt = "2.2.0"
sqlx = { version = "0.5", features = ["mysql", "runtime-tokio-rustls"] }
dotenv = "0.15.0"
serde_json = "1.0"
